[package]
name = "disq"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
serde = "1.0.136"
serde_json = "1.0.77"
thiserror = "1.0.30"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
